css/style.css
/* COMMONS */

/* VARIABLES */


body {
    font-family: 'Roboto', sans-serif;
}

:root{
    --sidebar-color: #051E34;
    --sidebar-width: 60px;
    --sidebar-width-lg: 150px;
    --header-color: #FFFFFF;
    --header-height: 70px;
    --navbarblue-top-color:#1B72E8;
    --navbarblue-top-height: 70px;
    --bell-color: #FF8F00;
}

img {
    max-width: 100%;
}

a {
    text-decoration: none;
    color: white;
    display: inline-block;
}

ul {
    list-style-type: none;
    padding-left: 0rem;
}

/* LAYOUT */

.wrapper{
    height: 100vh;
    /* debug */
    /* background-color: rgb(37, 36, 36) */
}



/* ------------------------------------------------------------- */

/* MAIN HEADER */

header {
    width: 100%;
    height: var(--header-height);

    /* debug */
    /* background-color: lightskyblue; */
}

.logo {
    height: 100%;
}

.logo > * {
    width: var(--header-height);
    
}

.logo-normal {
    height: var(--header-height);
    border: 1px solid red;
    width: 200px;
    /* line-height: var(--header-height); */
    
}

.cta {
    width: 200px;
}

.logo-normal img {
    max-width: none;
    width: 200px;
}

header .input-group {
    width: 60%;
}

header .input-group i {
    width: 100%;
}

.cta i:last-child {
    color:  var(--bell-color);
}


/* -------------------------------------------------------------- */
/* SIDEBAR */

#sidebar {
    height: calc(100vh - var(--header-height));
    width: var(--sidebar-width);
    background-color: var(--sidebar-color);
}



#home {
    width: 100%;
    /* debug */
    border: 1px solid green;
}

#home > * {
    /* debug */
    border: 1px solid red;
}

#setting {
    width: 100%;

    /* debug */
    height: 50px;
    border: 1px solid green;
}

/* -------------------------------------------------------------- */

#main-content {
    width: calc(100% - var(--sidebar-width));
    height: calc(100vh - var(--header-height));
    /* debug */
    background-color: rgb(150, 112, 80);
    overflow-y: auto;
}

#navbar-blue{
    width: 100%;
    height: var(--navbarblue-top-height);
    background-color: var(--navbarblue-top-color);
    position: sticky;
    top: 0;
    right: 0;
    left: 0;
}

#main-section{
    /* debug */    
    border: 1px solid rebeccapurple;
}

#first-section {
    /* debug */
    background-color: rgb(87, 94, 91);
    border: 1px solid rgb(51, 153, 65);
}

#first-section section{
    /* debug */
    background-color: rgb(143, 127, 56);
    border: 1px solid rgb(1, 22, 4);
}

#second-section {
    /* debug */
    background-color: rgb(112, 121, 202);
    border: 1px solid rgb(31, 104, 41);
}

#second-section section{
    /* debug */
    background-color: rgb(105, 105, 101);
    border: 1px solid rgb(238, 42, 7);
}




/* ####################################################### */


/* MEDIA QUERY LARGE MONITOR */

@media screen and (width >=992px) {
    #sidebar {
        width: var(--sidebar-width-lg);
    }

    #main-content {
        width: calc(100% - var(--sidebar-width-lg));
        /* debug */
        background-color: rgb(150, 112, 80);
    }
    
}

